<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="2dp"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mango.cs_408_project.CourseDisplay">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="Course Name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/course_rating"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/num_reviews_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:text="10 reviews"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/value_lecture_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:text="Lectures are valuable:" />

        <ProgressBar
            android:id="@+id/value_lecture_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73" />

        <TextView
            android:id="@+id/understandable_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:text="Professor is understandable:" />

        <ProgressBar
            android:id="@+id/understandable_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73" />


        <TextView
            android:id="@+id/extra_credit_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:text="There is extra credit:" />

        <ProgressBar
            android:id="@+id/extra_credit_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68" />

        <TextView
            android:id="@+id/help_sessions_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:text="There are help sessions:" />

        <ProgressBar
            android:id="@+id/help_sessions_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68" />


        <TextView
            android:id="@+id/electronics_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:text="Electronics are allowed:" />

        <ProgressBar
            android:id="@+id/electronics_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68" />

        <TextView
            android:id="@+id/textbook_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:text="Textbook is required:" />

        <ProgressBar
            android:id="@+id/textbook_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68" />

        <TextView
            android:id="@+id/toughness_course_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:text="Toughness:" />

        <ProgressBar
            android:id="@+id/toughness_course_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.68" />

        <!--<ListView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="150dp"-->
        <!--android:id="@+id/listView"-->
        <!--android:layout_weight="1.01" />-->

        <TextView
            android:text="Instructors teaching (and average ratings):"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructors_text"
            android:layout_weight="0.10" />

        <TextView
            android:text="PROF ABC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructors_teaching_list"
            android:layout_weight="0.10"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/view_course_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="View Reviews" />

        <Button
            android:id="@+id/course_info_addReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add review"
            android:layout_weight="0.10" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.11" />
    </LinearLayout>
</ScrollView>
