<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="20dp"
        android:weightSum="1"
        android:orientation="vertical">


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/searchQueryField"
            android:hint="Instructor / Course" />


        <Button
            android:text="Search for instructor / course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:id="@+id/searchSubmit" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchSubmit"
            android:layout_alignEnd="@+id/searchSubmit"
            android:layout_marginEnd="97dp"
            android:id="@+id/success_fail_message"
            android:textSize="32sp" />

        <Button
            android:text="Add a new course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_course_button" />

        <Button
            android:text="Add a new instructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_instructor_button" />

    </LinearLayout>
</ScrollView>
