<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">

    </LinearLayout>


    <TextView
        android:id="@+id/version_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Instructor: "
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/instructor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fill in here"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/version_heading"
        android:layout_alignBottom="@+id/version_heading"
        android:layout_toEndOf="@+id/version_heading" />

    <TextView
        android:id="@+id/semester_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Semester Taken: "
        android:textColor="@android:color/black"
        android:layout_below="@+id/version_heading"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />



    <TextView
        android:text="Comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/semester_taken"
        android:layout_toStartOf="@+id/instructor_name"
        android:layout_marginTop="13dp" />



    <TextView
        android:text="TextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/courseComment2"
        android:layout_weight="1"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/frameLayout" />

    <TextView
        android:text="              "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/semester_takenInput"
        android:layout_alignBaseline="@+id/semester_taken"
        android:layout_alignBottom="@+id/semester_taken"
        android:layout_toEndOf="@+id/semester_taken" />

    <RatingBar
        android:id="@+id/reviewStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:layout_below="@+id/semester_taken"
        android:layout_alignStart="@+id/textView7" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/semester_takenInput"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout">


        <Button
            android:id="@+id/likes_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="8dp"
            android:text="helpful?"
            android:textSize="12sp"
            android:textAlignment="viewEnd"
            android:textColor="@color/tw__composer_black"/>

        <TextView
            android:id="@+id/badge_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_notification_overlay"
            android:text="0"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:elevation="100dp"
            />

    </FrameLayout>

    <ImageView
        android:id="@+id/info_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_dialog_info"
        android:layout_marginStart="17dp"
        android:layout_alignBottom="@+id/deleteReview"
        android:layout_alignStart="@+id/frameLayout" />

    <ImageView
        android:id="@+id/deleteReview"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/ic_delete"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:srcCompat="@drawable/downvote"-->
        <!--android:id="@+id/downVoteButton"-->
        <!--android:layout_below="@+id/semester_takenInput"-->
        <!--android:layout_toStartOf="@+id/info_item"-->
        <!--android:layout_above="@+id/courseComment2" />-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:srcCompat="@drawable/upvote"-->
        <!--android:id="@+id/upVoteButton"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignStart="@+id/downVoteButton" />-->

    <!--<TextView-->
        <!--android:text="0"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/upVoteDisplay"-->
        <!--android:layout_above="@+id/downVoteButton"-->
        <!--android:layout_toEndOf="@+id/upVoteButton" />-->

    <!--<TextView-->
        <!--android:text="0"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/downVoteDisplay"-->
        <!--android:layout_above="@+id/courseComment2"-->
        <!--android:layout_alignStart="@+id/upVoteDisplay" />-->

</RelativeLayout>

